src/z80asm/z80asm2/t/30-directive/expected/line_02.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/line_02.asm
Assembling t/30-directive/input/line_02.asm...
t/30-directive/input/line_02.asm:1:6: error: Expected line number after LINE
    line -10 ; no line number
         ^
